Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h
@@ -512,6 +512,7 @@ private:
 #endif
     bool m_isBuffering { false };
     int m_bufferingPercentage { 0 };
+    bool m_hasWebKitWebSrcSentEOS { false };
     mutable unsigned long long m_totalBytes { 0 };
     URL m_url;
     bool m_shouldPreservePitch { false };
